# velociraptor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.builder  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/skills/velociraptor-add-exchange/: SKILL.md
.claude/skills/velociraptor-backend-redis/: SKILL.md
.claude/skills/velociraptor-executor/: SKILL.md
.claude/skills/velociraptor-kalshi/: SKILL.md
.claude/skills/velociraptor-nginx/: SKILL.md
.claude/skills/velociraptor-overview/: SKILL.md
.claude/skills/velociraptor-polymarket/: SKILL.md
.claude/skills/velociraptor-python-clients/: SKILL.md
.claude/skills/velociraptor-rust-api/: SKILL.md
.claude/skills/velociraptor-storage/: SKILL.md
backend/: Cargo.toml  Dockerfile
backend/src/: error.rs  lib.rs  state.rs
backend/src/routes/: control.rs  events.rs  logs.rs  markets.rs  mod.rs  monitor.rs  orderbook.rs  pmexplorer.rs  spot.rs
config/: server.toml
configs/: example.docker.yaml  example.yaml  fetcher.yaml  kalshi.toml  kalshi.yaml  polymarket.toml  polymarket.yaml  server.toml  server.yaml
configs/dev/: config.yaml  kalshi.yaml  recorder.yaml  risk.yaml
configs/prod/: config.yaml  polymarket.yaml  recorder.yaml  risk.yaml
credentials/: example.toml  example.yaml
credentials/prod/: example.yaml
deploy/systemd/: README.md  update.sh  velociraptor-asset-id-fetcher.service  velociraptor-mcp-monitor.service  velociraptor-orderbook-recorder.service  velociraptor-polymarket-recorder.service  velociraptor-price-to-beat-fetcher.service  velociraptor.target
docs/: exchange-wire-formats.md  how-to-add-new-exchanges.md  kalshi.md  nginx.md  polymarket.md  protocol.md  redis.md  storage.md  systemd.md
executor/: Cargo.toml  Dockerfile
executor/src/: error.rs  executor.rs  lib.rs  registry.rs  traits.rs
executor/src/control/: mod.rs  shutdown.rs
executor/src/gateway/: idempotency.rs  mod.rs
executor/src/ops/: audit.rs  metrics.rs  mod.rs  reconcile.rs  secrets.rs
executor/src/pretrade/: context.rs  engine.rs  mod.rs  rules.rs  state.rs
executor/src/rest/: kalshi.rs  mod.rs  polymarket.rs  retry.rs
executor/src/risk_mgnt/: context.rs  engine.rs  mod.rs  rules.rs
executor/src/utils/: audit_csv.rs  mod.rs
executor/tests/: kalshi_mainnet.rs  polymarket_mainnet.rs  zmq_roundtrip.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  theme.json
libs/: Cargo.toml
libs/src/: constants.rs  lib.rs  logging.rs  schemas.rs  time.rs
libs/src/configs/: backend.rs  binance.rs  executor.rs  fetcher.rs  hyperliquid.rs  kalshi.rs  logging.rs  mod.rs  okx.rs  polymarket.rs  redis.rs  risk.rs  server.rs  storage.rs
libs/src/credentials/: binance.rs  hyperliquid.rs  kalshi.rs  mod.rs  okx.rs  polymarket.rs
libs/src/endpoints/: binance.rs  hyperliquid.rs  kalshi.rs  mod.rs  okx.rs  polymarket.rs
libs/src/protocol/: control.rs  events.rs  mod.rs  orders.rs
libs/src/redis_client/: keys.rs  mod.rs  spillover.rs
libs/src/terminal/: ansi.rs  layout.rs  mod.rs  panel.rs  polymarket.rs  status.rs
mcp_monitor/: README.md  monitoring_server.py  requirements.txt
orderbook/: Cargo.toml  README.md
orderbook/examples/: api_usage.rs  exchange_connector_tests.rs  exchange_websocket.rs  kalshi_orderbook.rs  orderbook.rs  polymarket_last_trade.rs  polymarket_orderbook.rs  polymarket_user_channel.rs  stream_orderbook_instance.rs  zmq_publisher.rs
orderbook/src/: lib.rs  main.rs  price_to_beat.rs
orderbook/src/api/: mod.rs  orderbook_system.rs
orderbook/src/configs/: exchanges.rs  logging.rs  mod.rs  server.rs  storage.rs
orderbook/src/connection/: client.rs  configs.rs  constants.rs  mod.rs  traits.rs  v1.rs
orderbook/src/core/: mod.rs  orderbook.rs  types.rs
orderbook/src/exchanges/: mod.rs
orderbook/src/exchanges/binance/: client.rs  connection.rs  endpoints.rs  mod.rs  msg_parser.rs  normalizer.rs  subscription.rs  types.rs
orderbook/src/exchanges/hyperliquid/: client.rs  connection.rs  mod.rs  msg_parser.rs  subscription.rs  types.rs
orderbook/src/exchanges/kalshi/: auth.rs  client.rs  connection.rs  mod.rs  msg_parser.rs  scheduler.rs  subscription.rs  types.rs  utils.rs
orderbook/src/exchanges/okx/: client.rs  connection.rs  endpoints.rs  mod.rs  msg_parser.rs  subscription.rs
orderbook/src/exchanges/polymarket/: client.rs  condition.rs  connection.rs  mod.rs  msg_parser.rs  resolver.rs  scheduler.rs  subscription.rs  types.rs
orderbook/src/heartbeat/: manager.rs  metrics.rs  mod.rs  protocol.rs  state.rs
orderbook/src/orderbook/: engine.rs  hooks.rs  mod.rs  orderbook.rs  orderbook_manager.rs  system.rs  utils.rs
orderbook/src/publisher/: mod.rs  protocol.rs  types.rs  zmq.rs
orderbook/src/types/: endpoints.rs  errors.rs  events.rs  mod.rs  orderbook.rs  stream.rs
orderbook/src/utils/: logging.rs  mod.rs  thread_monitor.rs
orderbook/tests/okx_connection_tests/: test_okx_endpoints.rs  test_okx_robust.rs  test_okx_ws.rs
recorder/: Cargo.toml
recorder/src/: config.rs  csv.rs  event.rs  format.rs  lib.rs  mpack_writer.rs  writer.rs
scripts/: analyze_latency.py  fetch_polymarket_market.py  fetch_polymarket_tokens.py  poly_heartbeat.py  polymarket_keygen.py  read_events.py  read_mpack.py  read_polymarket.py
scripts/trading_engine/: README.md  __init__.py  __main__.py  app.py  cli.py
systemd/: orderbook-server.service  polymarket-recorder.service
zmq_server/: Cargo.toml  Dockerfile  README.md
zmq_server/examples/: orderbook_subscriber.py  zmq_publisher.rs  zmq_subscriber.py
zmq_server/src/: lib.rs  protocol.rs  server.rs  setup.rs  types.rs
zmq_server/src/control/: handler.rs  mod.rs  registry.rs
zmq_server/src/frame/: market.rs  mod.rs  user.rs
zmq_server/src/setup/: bootstrap.rs  exchanges.rs  kalshi.rs  mod.rs  polymarket.rs  redis_attach.rs  rolling.rs
zmq_server/src/socket/: mod.rs  publish.rs  router.rs
zmq_server/src/topics/: bba.rs  mod.rs  snapshot.rs  trade.rs  user.rs
zmq_server/src/trading/: engine.rs  events.rs  mod.rs  system.rs
(+64 files in other folders)
