[workspace]
members = ["libs","orderbook"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = "0.7"

# WebSocket
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.1"  # msgpack for Rust

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"  # File rotation

# ZMQ
zmq = { version = "0.10" }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Crypto (for HMAC-SHA256 auth)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22.1"
hex = "0.4"

# Async traits
async-trait = "0.1"

# Config
config = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
tokio-test = "0.4"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["teahouse-finance"]
license = "None"
