[workspace]
members = ["libs","orderbook","recorder"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.1"
config = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"

# Async utilities
futures = "0.3.31"
futures-util = "0.3"

hex = "0.4"
hmac = "0.12"

# msgpack for Rust
rmp-serde = "1.1"

# Compression
zstd = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Crypto (for HMAC-SHA256 auth)
sha2 = "0.11"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"  # File rotation

# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = "0.7"
tokio-test = "0.4"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }

thiserror = "2.0"
url = "2.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

# message queue
zmq = { version = "0.10" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["teahouse-finance"]
license = "None"
