[workspace]
members = ["libs","orderbook","recorder","executor","backend","zmq_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
futures-util = "0.3"

hex = "0.4"
hmac = "0.12"

# msgpack for Rust
rmp-serde = "1.1"

# CSV (human-readable archive format)
csv = "1.3"

# Compression
zstd = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Crypto (for HMAC-SHA256 auth and RSA-PSS signing)
sha2 = "0.11"
rsa = { version = "0.9", features = ["sha2", "pem"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"  # File rotation

# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }

thiserror = "2.0"
url = "2.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

# message queue
zmq = { version = "0.10" }

# HTTP client (used at startup for Polymarket token resolution)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Redis (tokio async, connection manager)
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }

# Axum + tower-http (backend HTTP API)
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Secrets / hashing
secrecy = "0.10"
zeroize = "1.8"
blake3 = "1.5"

# Caching / rate limiting / metrics
lru = "0.18"
governor = "0.10"
prometheus = "0.14"

# EIP-712 signing primitives for Polymarket order signing
k256 = { version = "0.13", features = ["ecdsa"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["teahouse-finance"]
license = "None"
