[package]
name = "backend"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.27", features = ["derive", "env"] }
dotenvy = "0.15.7"
libs = { path = "../libs", features = ["redis"] }
orderbook = { path = "../orderbook" }
redis = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zmq = { workspace = true }

[[bin]]
name = "backend"
path = "src/bin/backend.rs"
