[package]
name = "executor"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []
# Gate network-hitting integration tests (matches `orderbook` convention).
integration_tests = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
libs = { path = "../libs", features = ["redis"] }
redis = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zmq = { workspace = true }

[[bin]]
name = "executor"
path = "src/bin/executor.rs"
