[package]
name = "libs"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
license = {workspace = true}

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
crossterm = { version = "0.29.0", default-features = false }
chrono = { workspace = true }