[package]
name = "libs"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
license = {workspace = true}

[features]
default = []
# Opt-in Redis helper (used by orderbook-server, executor, backend).
# Keeps `libs` usable by consumers that only need constants/protocol.
redis = ["dep:redis", "dep:tracing", "dep:zstd"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
crossterm = { version = "0.29.0", default-features = false }
chrono = { workspace = true }
rmp-serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }

# Optional — enabled by `redis` feature.
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"], optional = true }
tracing = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
