[package]
edition = "2024"
name = "orderbook"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
bytes = "1.6.0"
chrono = { workspace = true }
clap = { version = "4.5.27", features = ["derive", "env"] }
ctrlc = "3.2.5"
dashmap = { workspace = true }
dotenvy = "0.15.7"
futures = "0.3"
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
lazy_static = "1.4"
ordered-float = "5.0.0"
rand = "0.10.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
tmq = "0.5"
libs = { path = "../libs" }

[dev-dependencies]
tempfile = "3.8"