[package]
edition = "2024"
name = "orderbook"
version = "0.1.0"
autoexamples = false

[[example]]
name = "orderbook"
path = "examples/orderbook.rs"

[[example]]
name = "polymarket_orderbook"
path = "examples/polymarket_orderbook.rs"

[[example]]
name = "polymarket_user_channel"
path = "examples/polymarket_user_channel.rs"

[[example]]
name = "kalshi_orderbook"
path = "examples/kalshi_orderbook.rs"

[[example]]
name = "polymarket_last_trade"
path = "examples/polymarket_last_trade.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
bytes = "1.6.0"
chrono = { workspace = true }
clap = { version = "4.5.27", features = ["derive", "env"] }
ctrlc = "3.2.5"
dashmap = { workspace = true }
dotenvy = "0.15.7"
futures = "0.3"
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
lazy_static = "1.4"
chrono-tz = "0.10"
ordered-float = "5.0.0"
rand = "0.10.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
rsa = { workspace = true }
libs       = { path = "../libs", features = ["redis"] }
recorder   = { path = "../recorder" }
reqwest   = { workspace = true }
rmp-serde = { workspace = true }
zstd      = { workspace = true }
redis     = { workspace = true }
csv       = "1.3"

[[bin]]
name = "target_price_fetcher"
path = "src/bin/target_price_fetcher.rs"

[[bin]]
name = "live_price_streamer"
path = "src/bin/live_price_streamer.rs"

[dev-dependencies]
tempfile = "3.8"
