[package]
name = "recorder"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow      = { workspace = true }
chrono      = { workspace = true }
csv         = { workspace = true }
rmp-serde   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
zstd        = { workspace = true }
libs        = { path = "../libs" }